--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ canvas {
     background-color: #ff69b4;
 }
 
-#messageInput {
+#messageInput, #guessInput {
     padding: 10px;
     width: 300px;
     margin: 10px;
@@ -87,4 +87,15 @@ canvas {
     margin: 10px 0;
     border-radius: 5px;
     font-size: 16px;
+}
+
+#gameFeedback {
+    font-size: 18px;
+    color: #333;
+    margin: 10px 0;
+}
+
+#guessesLeft {
+    font-size: 16px;
+    color: #ff69b4;
 }
